# multiai

./: .gitignore  Cargo.toml  README.md
.specify/: constitution.md
.specify/plans/: core-gateway.md
.specify/specs/: core-gateway.md
.specify/templates/: plan.md  spec.md  tasks.md
docs/plans/: 2025-01-01-macos-menu-bar-app-design.md  2025-01-02-chat-ui-design.md  2026-01-02-minimal-dividers-design.md  2026-01-03-streaming-refactor-multiplatform.md  2026-01-03-usp-pivot-design.md  2026-01-04-mcp-compare-models-design.md
docs/ui-patterns/: collapsible-sidebar.md
frontend/: debug-app.js  debug-theme.js  debug-timing.js  index.html  package-lock.json  package.json  theme-test.html  vite.config.js  vitest.config.js
frontend/src/: App.jsx  index.css  index.jsx
frontend/src/components/: ChatView.jsx  ComparisonPane.jsx  ComparisonPane.test.jsx  FreeAiWarning.jsx  MessageInput.jsx  ModelSelector.jsx  NoApiKeysBanner.jsx  OnboardingBanner.jsx  Settings.jsx  SetupWizard.jsx  Sidebar.jsx  Sidebar.test.jsx  TitleBar.jsx
frontend/src/components/model-selector/: ModelSelector.jsx  index.js  useModelSelector.js
frontend/src/components/onboarding/: OnboardingBanner.jsx  SetupWizard.jsx  index.js
frontend/src/hooks/: useStreamingChat.js
frontend/src/hooks/__tests__/: useStreamingChat.test.js
frontend/src/services/: sseParser.js  sseParser.test.js  streaming.integration.test.js  streamingApi.js  streamingApi.test.js
frontend/src/services/streaming/: CircuitBreaker.js  RetryPolicy.js  StreamingClient.js  TelemetryLogger.js  errors.js  index.js
frontend/src/services/streaming/__tests__/: CircuitBreaker.test.js  RetryPolicy.test.js  StreamingClient.test.js  TelemetryLogger.test.js  errors.test.js
frontend/src/stores/: comparisonStore.js
frontend/src/test/: debug-streaming.spec.js  settings-debug.spec.js
frontend/src/test/mocks/: tauri-shell.js
frontend/test-results/src-test-debug-streaming-debug-streaming-error/: error-context.md
src/: api.rs  chat.rs  chat_api.rs  config.rs  document.rs  error.rs  export.rs  http.rs  inspector.rs  lib.rs  logger.rs  main.rs  scanner.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/api/: handlers.rs  mod.rs  types.rs
src/chat_api/: handlers.rs  mod.rs  tests.rs  types.rs
src/mcp/: compare.rs  judge.rs  mod.rs  spending.rs  tests.rs
src/scanner/: mod.rs  tests.rs
static/: index.html
static/assets/: index.css  index.js
tests/e2e/: package-lock.json  package.json  playwright.config.js  wdio.conf.js
tests/e2e/playwright/: app.spec.js
tests/e2e/specs/: app.spec.js
tests/fixtures/: sample.docx
